lagom-client-restaurant/restaurant-client/deploy/kubernetes/restaurant-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: restaurant-client
  name: restaurant-client-svc
spec:
  type: ClusterIP
  selector:
    app: restaurant-client
  ports:
    - name: http
      port: 80
      targetPort: frontend-http
