lagom-client-restaurant/restaurant-client/deploy/kubernetes/restaurant-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restaurant-client-ingress
spec:
  rules:
    - host: local-minikube.com
      http:
        paths:
          - path: /
            backend:
              serviceName: restaurant-client-svc
              servicePort: 80
